k8s/next/service-app-next.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-next
  labels:
    app: buzz
    component: app-next
spec:
  selector:
    app: buzz
    component: app-next
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
