k8s/next/ingress-app-next.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-next
  annotations:
    traefik.ingress.kubernetes.io/read-timeout: "200"
spec:
  ingressClassName: traefik
  rules:
    - host: buzz-next.sudloh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-next
                port:
                  number: 3000
